# bindcar

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md
.claude/: CHANGELOG.md  SKILL.md  claude.md  settings.json
.claude/rules/: documentation.md  github-workflows.md  rust-style.md  testing.md
.github/: dependabot.yml
.github/actions/prepare-docker-binaries/: action.yaml
.github/workflows/: build.yaml  ci.yml  dependabot-auto-merge.yaml  docker.yml  docs.yaml  e2e.yaml  main.yaml  pr.yml  release.yml
deploy/: networkpolicy.yaml  pod-hardening.yaml  rbac.yaml
docker/: .dockerignore  Dockerfile  Dockerfile.chainguard  Dockerfile.chef  Dockerfile.local
docs/: .gitignore  MERMAID.md  README.md  book.toml  mermaid-init.js  mkdocs.yml  pyproject.toml
docs/roadmaps/: bind9-full-zone-config-support.md  completed-rndc-conf-parser.md  dnssec-feature-summary.md  rndc-conf-parser.md  standalone-out-of-cluster.md
docs/src/: SUMMARY.md  changelog.md  contributing.md  generate_placeholders.sh  index.md  introduction.md  license.md  rustdoc.md
docs/src/advanced/: access-control.md  auth.md  dnssec.md  external-dns.md  ha.md  integration.md  performance.md  security.md  tuning.md
docs/src/api-overview/: index.md
docs/src/api-reference/: api-health.md  api-zones.md  index.md
docs/src/architecture/: index.md
docs/src/configuration/: index.md
docs/src/creating-zones/: index.md
docs/src/dev-setup/: building.md  index.md
docs/src/developer-guide/: architecture-deep-dive.md  building.md  contributing.md  k8s-token-validation.md  rndc-integration.md  rndc-parser.md  setup.md  testing.md
docs/src/getting-started/: api-design.md  architecture.md  index.md  prerequisites.md  quickstart.md
docs/src/installation/: index.md  prerequisites.md  quickstart.md
docs/src/managing-zones/: deleting-zones.md  index.md  zone-status.md
docs/src/monitoring/: index.md
docs/src/operations/: authentication.md  configuration.md  deployment.md  docker.md  env-vars.md  kubernetes.md  logging.md  monitoring.md  troubleshooting.md
docs/src/reference/: api-health.md  api-records.md  api-status-codes.md  api-zones.md  api.md  examples.md
docs/src/stylesheets/: extra.css
docs/src/user-guide/: api-overview.md  creating-zones.md  deleting-zones.md  dns-records.md  health-status.md  managing-records.md  records.md  reloading-zones.md  zone-config.md  zone-operations.md  zone-status.md  zones.md
docs/theme/: custom.css
examples/: use_shared_types.rs
examples/external-bind9/: named.conf  named.conf.local  named.conf.options  rndc.conf  rndc.key  setup.sh
integration-test/: drone-external-bind9.sh  kind-e2e.sh
scripts/: build-docker-fast.sh  setup-docs-env.sh  validate-deploy.sh
src/: auth.rs  auth_test.rs  cli.rs  cli_test.rs  lib.rs  main.rs  main_test.rs  metrics.rs  metrics_test.rs  middleware.rs  middleware_test.rs  nsupdate.rs  nsupdate_test.rs  rate_limit.rs  rate_limit_test.rs  records.rs  records_test.rs  rndc.rs  rndc_conf_parser.rs  rndc_conf_parser_tests.rs  rndc_conf_types.rs  rndc_conf_types_tests.rs  rndc_parser.rs  rndc_parser_tests.rs  rndc_test.rs  rndc_types.rs  rndc_types_tests.rs  types.rs  types_test.rs  zones.rs  zones_test.rs
