[package]
name = "bind9-rndc-api"
version = "0.1.0"
edition = "2021"
authors = ["Erick Bourgeois <firestoned@firestoned.io>"]
license = "MIT"
description = "HTTP REST API for managing BIND9 zones via rndc"
repository = "https://github.com/firestoned/bindy"

[dependencies]
# HTTP server framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Command execution
tokio-process = "0.2"

[dev-dependencies]
# Testing
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
