[package]
name = "bindcar"
version = "0.1.0"
edition = "2021"
authors = ["Erick Bourgeois <firestoned@firestoned.io>"]
license = "MIT"
description = "HTTP REST API for managing BIND9 zones via rndc"
repository = "https://github.com/firestoned/bindcar"
keywords = ["dns", "bind9", "rndc", "api", "kubernetes"]
categories = ["api-bindings", "network-programming", "web-programming::http-server"]
readme = "README.md"

# Library configuration
[lib]
name = "bindcar"
path = "src/lib.rs"

# Binary configuration
[[bin]]
name = "bindcar"
path = "src/main.rs"

[dependencies]
# HTTP server framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Metrics
prometheus = "0.14"
lazy_static = "1.4"

[dev-dependencies]
# Testing
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
